changed the layout for emails

--- a/src/auth/Login.css
+++ b/src/auth/Login.css
@@ -1,5 +1,6 @@
 .h1, h1 {
     font-size: 2.5rem;
+    text-align: center;
 }
 
 fieldset {
@@ -7,12 +8,16 @@ fieldset {
     padding: 1rem 0;
     margin: 0;
     border: 0;
+    
 }
+
+
+
 
 .form--login {
     display: inline-block;
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
 }
 
 .form--login > fieldset > input[type="email"],
@@ -23,10 +28,10 @@ fieldset {
 .label--login {
     width: 8rem;
     display: inline-block;
+    
 }
-
-.form-control {
-    display: block;
+.form-email{
+    
     width: 94%;
     height: calc(1.5em + .75rem + 2px);
     padding: .375rem .75rem;
@@ -40,6 +45,24 @@ fieldset {
     border-radius: .25rem;
     -webkit-transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    text-align: center;
+}
+.form-control {
+    
+    width: 94%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    -webkit-transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    
 }
 
 .container--login {
@@ -54,6 +77,7 @@ fieldset {
     background-color: hsla(0,0%,100%,0.40);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
+    
 }
 
 .button--close {
