--- a/src/nav/NavBar.css
+++ b/src/nav/NavBar.css
@@ -1,10 +1,18 @@
 .navbar {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: left;
+    justify-content: center;
 }
 
 .navbar__item {
     flex-basis: 20%;
     list-style-type: none;
+}
+
+.navbar__link {
+color: rgb(94, 88, 88);
+}
+
+.navbar__trips{
+    color: rgb(94, 88, 88);
 }
