got a picture to show up

--- a/src/auth/Login.css
+++ b/src/auth/Login.css
@@ -71,6 +71,7 @@ fieldset {
 
 .form--login {
     background-position-x: right;
+    background-image: url(minimal.png);
     z-index: 1;
     min-height: 25rem;
     min-width: 45rem;
