--- a/src/Travel.css
+++ b/src/Travel.css
@@ -2,7 +2,6 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
 
 body,
-button,
 input,
 select,
 textarea {
@@ -29,4 +28,13 @@ strong {
 
 address {
   margin: 0 0 1.5em;
+}
+
+button{
+    color: black;
+    background-color: grey;
+    
+}
+button:hover{
+    color: white;
 }
