--- a/src/auth/Login.css
+++ b/src/auth/Login.css
@@ -1,7 +1,10 @@
 .h1 {
     font-size: 2.5rem;
     text-align: center;
+    
 }
+
+
 
 fieldset {
     min-width: 0;
@@ -9,9 +12,6 @@ fieldset {
     margin: 0;
     border: 0;
 }
-
-
-
 
 .form--login {
     display: inline-block;
@@ -62,6 +62,7 @@ fieldset {
     -webkit-transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     
+    
 }
 
 .container--login {
@@ -76,7 +77,7 @@ fieldset {
     background-color: hsla(0,0%,100%,0.40);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
-    
+    background-image: url(./hotairballoon.jpg);
 }
 
 .button--close {
