--- a/src/cost/Cost.css
+++ b/src/cost/Cost.css
@@ -10,3 +10,8 @@
       padding: 1em;
       border: 1px solid goldenrod;
   }
+
+  .categoryForm{
+      background-image: url(../auth/grass.jpg);
+     
+  }
