--- a/src/pack/Pack.css
+++ b/src/pack/Pack.css
@@ -10,3 +10,9 @@
       padding: 1em;
       border: 1px solid goldenrod;
   }
+
+  .packingCategoryForm{
+      background-image: url(../auth/prettyroad.jpg);
+      color: white;
+      text-align: center;
+  }
