saved my auth file

--- a/src/cost/Cost.css
+++ b/src/cost/Cost.css
@@ -12,6 +12,6 @@
   }
 
   .categoryForm{
-      background-image: url(../auth/grass.jpg);
-     
+      background-image: url(../auth/sunrise.jpg);
+color: white;
   }
